--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -11,3 +11,8 @@ $color-violet: #7752be;
 $color-yellow: #fab005;
 $color-red: #f03e3d;
 $color-blue: #4dadf7;
+
+$content-width: 1200px;
+$tablet-width: 768px;
+$mobile-big-width: 414px;
+$mobile-small-width: 320px;
