feat: add header styles

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,13 @@
-@import "base/base";
 @import "abstract/constants";
+
+// Base
+@import "base/base";
+@import "base/buttons";
+
+// Layouts
+@import "layouts/wrapper";
+@import "layouts/header";
+
+// Components
+@import "components/contact-us";
+@import "components/navigation";
