--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -6,6 +6,9 @@ $color-tag: #f5f5f5;
 $color-text: #544837;
 $color-heading: #2f281e;
 $color-border: #d7d7d7;
+$color-button: #173a56;
+$color-button-hovered: #bcd0e5;
+$color-light: #ffffff;
 
 $color-violet: #7752be;
 $color-yellow: #fab005;
