--- a/sass/style.css
+++ b/sass/style.css
@@ -43,4 +43,77 @@ h5 {
   line-height: 26px;
 }
 
+.button {
+  padding: 11px 25px 13px;
+  font-family: "Open Sans", Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.button--bordered {
+  background-color: #ffffff;
+  border: 1px solid #d7d7d7;
+  color: #173a56;
+}
+
+.button--bordered:hover {
+  background-color: #bcd0e5;
+  border-color: #bcd0e5;
+}
+
+.button--colored {
+  background-color: #ff9900;
+  color: #ffffff;
+  border: 1px solid #ff9900;
+}
+
+.button--colored:hover {
+  background-color: #ff7549;
+  border-color: #ff7549;
+}
+
+.content-wrapper {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.header {
+  padding: 15px 0 17px 0;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+}
+
+.header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__buttons > .button:last-child {
+  margin-left: 14px;
+}
+
+.contact-us {
+  background-color: #ffeee1;
+}
+
+.navigation {
+  display: flex;
+  font-size: 1.5rem;
+  line-height: 2.8rem;
+}
+
+.navigation__link {
+  list-style: none;
+  padding: 0 10px;
+}
+
+.navigation__link a:hover {
+  color: #ff9900;
+}
+
 /*# sourceMappingURL=style.css.map */
