--- a/sass/style.css
+++ b/sass/style.css
@@ -97,6 +97,24 @@ h5 {
   margin-left: 14px;
 }
 
+.promo {
+  padding: 30px 0;
+}
+
+.promo__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.promo__content {
+  padding-right: 65px;
+}
+
+.promo__buttons > * {
+  margin-right: 44px;
+}
+
 .contact-us {
   background-color: #ffeee1;
 }
