--- a/sass/style.css
+++ b/sass/style.css
@@ -669,6 +669,11 @@ h5 {
   max-width: 1200px;
   margin: auto;
 }
+@media (max-width: 1200px) {
+  .content-wrapper {
+    padding: 0 46px;
+  }
+}
 
 .header {
   padding: 15px 0 17px 0;
