--- a/sass/style.css
+++ b/sass/style.css
@@ -665,6 +665,36 @@ h5 {
   background-color: #f5f5f5;
 }
 
+.hamburger__line, .hamburger::after, .hamburger::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  display: inline-block;
+  background-color: #173a56;
+  border-radius: 5px;
+}
+
+.hamburger {
+  display: inline-block;
+  position: relative;
+  width: 31px;
+  height: 25px;
+}
+.hamburger::before {
+  top: 0;
+  left: 0;
+}
+.hamburger::after {
+  bottom: 0;
+  left: 0;
+}
+
+.hamburger__line {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .content-wrapper {
   max-width: 1200px;
   margin: auto;
