feat: add responsive for header

--- a/sass/base/_hamburger.scss
+++ b/sass/base/_hamburger.scss
@@ -9,10 +9,14 @@
 }
 
 .hamburger {
-  display: inline-block;
+  display: none;
   position: relative;
   width: 31px;
   height: 25px;
+  margin-right: 37px;
+  @include media-tablet {
+     display: inline-block;
+  }
   &::before {
     @extend %hamburger-line;
     top: 0;
