feat: add responsive for promo section

--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -5,8 +5,9 @@
 
 .ico--play {
   background-image: url("../../img/icons/play.svg");
-  width: 18px;
+  width: 22px;
   height: 19px;
+  background-repeat: no-repeat;
 }
 
 .icon-square {
