--- a/sass/style.css
+++ b/sass/style.css
@@ -482,6 +482,14 @@ h1 {
   font-weight: bold;
   line-height: 5.4rem;
 }
+@media (max-width: 414px) {
+  h1 {
+    font-size: 3.2rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 4.2rem;
+  }
+}
 
 h2 {
   font-size: 3.4rem;
@@ -584,8 +592,9 @@ h5 {
 
 .ico--play {
   background-image: url("../../img/icons/play.svg");
-  width: 18px;
+  width: 22px;
   height: 19px;
+  background-repeat: no-repeat;
 }
 
 .icon-square {
@@ -726,6 +735,11 @@ h5 {
 @media (max-width: 1200px) {
   .content-wrapper {
     padding: 0 46px;
+  }
+}
+@media (max-width: 414px) {
+  .content-wrapper {
+    padding: 0 21px;
   }
 }
 
@@ -885,6 +899,7 @@ h5 {
 
 .promo {
   padding: 30px 0;
+  overflow: hidden;
 }
 
 .promo__wrapper {
@@ -892,9 +907,24 @@ h5 {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 414px) {
+  .promo__wrapper {
+    flex-direction: column-reverse;
+  }
+}
 
 .promo__content {
   padding-right: 65px;
+}
+@media (max-width: 768px) {
+  .promo__content {
+    padding-right: 0;
+  }
+}
+@media (max-width: 414px) {
+  .promo__content {
+    text-align: center;
+  }
 }
 
 .promo__title {
@@ -909,9 +939,46 @@ h5 {
   font-weight: normal;
   line-height: 2.8rem;
 }
+@media (max-width: 768px) {
+  .promo__text {
+    width: 380px;
+  }
+}
+@media (max-width: 414px) {
+  .promo__text {
+    width: auto;
+  }
+}
 
+@media (max-width: 414px) {
+  .promo__image {
+    max-width: 100%;
+    margin-bottom: 16px;
+  }
+}
+
+.promo__buttons {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
 .promo__buttons > * {
   margin-right: 44px;
+}
+.promo__buttons > *:last-child {
+  margin-right: 0;
+}
+@media (max-width: 414px) {
+  .promo__buttons {
+    flex-direction: column;
+  }
+  .promo__buttons > * {
+    margin-right: 0;
+    margin-bottom: 26px;
+  }
+  .promo__buttons > *:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .navigation {
