--- a/sass/components/_strategies.scss
+++ b/sass/components/_strategies.scss
@@ -4,27 +4,55 @@
 
 .strategies__title {
   margin: 0 0 14px;
+  @include media-tablet {
+    text-align: center;
+  }
 }
 
 .strategies__description {
   margin: 0 0 24px;
+  @include media-tablet {
+    text-align: center;
+  }
 }
 
 .strategies__tags {
   margin-bottom: 31px;
+  @include media-tablet {
+   justify-content: center;
+  }
 }
 
 // Strategy
 .strategy-wrapper {
   > * {
     margin-bottom: 30px;
+    @include media-tablet {
+      flex-basis: 48%;
+    }
+    @include media-mobile {
+      flex-basis: 100%;
+    }
+  }
+}
+
+.strategy {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  @include media-tablet {
+    overflow: hidden;
   }
 }
 
 .strategy__content {
   padding: 24px 33px 26px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .strategy__name {
   margin: 0 0 29px;
+  flex-grow: 1;
 }
