feat: add TagsClickHandler logic

--- a/src/sass/base/_icons.scss
+++ b/src/sass/base/_icons.scss
@@ -4,7 +4,7 @@
 }
 
 .ico--play {
-  background-image: url("../../img/icons/play.svg");
+  background-image: url("../img/icons/play.svg");
   width: 22px;
   height: 19px;
   background-repeat: no-repeat;
@@ -33,22 +33,22 @@
 }
 
 .ico--arrow {
-  background-image: url("../../img/icons/arrow.svg");
+  background-image: url("../img/icons/arrow.svg");
   width: 12px;
   height: 17px;
 }
 .ico--snake {
-  background-image: url("../../img/icons/snake.svg");
+  background-image: url("../img/icons/snake.svg");
   width: 18px;
   height: 14px;
 }
 .ico--heart {
-  background-image: url("../../img/icons/heart.svg");
+  background-image: url("../img/icons/heart.svg");
   width: 17px;
   height: 15px;
 }
 .ico--clock {
-  background-image: url("../../img/icons/clock.svg");
+  background-image: url("../img/icons/clock.svg");
   width: 15px;
   height: 17px;
 }
@@ -66,12 +66,12 @@
 }
 
 .ico--phone {
-  background-image: url("../../img/icons/phone.svg");
+  background-image: url("../img/icons/phone.svg");
   width: 7px;
   height: 11px;
 }
 .ico--letter {
-  background-image: url("../../img/icons/letter.svg");
+  background-image: url("../img/icons/letter.svg");
   width: 11px;
   height: 8px;
 }
