--- a/src/sass/base/_tags.scss
+++ b/src/sass/base/_tags.scss
@@ -5,6 +5,7 @@
   }
 }
 .tag {
+  cursor: pointer;
   @include font($size: 1.3rem, $height: 2.8rem, $weight: normal);
   border-radius: 90px;
   padding: 0 14px;
