--- a/src/sass/components/_strategies.scss
+++ b/src/sass/components/_strategies.scss
@@ -40,6 +40,9 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  &--hidden {
+    display: none;
+  }
   @include media-tablet {
     overflow: hidden;
   }
