--- a/src/sass/components/_tools.scss
+++ b/src/sass/components/_tools.scss
@@ -1,6 +1,6 @@
 .tools__wrapper {
   padding-bottom: 90px;
-  background-image: url(../../img/tools/tools-bg.png);
+  background-image: url('../img/tools/tools-bg.png');
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: 100%;
