--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -614,7 +614,7 @@ h5 {
 }
 
 .ico--play {
-  background-image: url("../../img/icons/play.svg");
+  background-image: url("../img/icons/play.svg");
   width: 22px;
   height: 19px;
   background-repeat: no-repeat;
@@ -642,25 +642,25 @@ h5 {
 }
 
 .ico--arrow {
-  background-image: url("../../img/icons/arrow.svg");
+  background-image: url("../img/icons/arrow.svg");
   width: 12px;
   height: 17px;
 }
 
 .ico--snake {
-  background-image: url("../../img/icons/snake.svg");
+  background-image: url("../img/icons/snake.svg");
   width: 18px;
   height: 14px;
 }
 
 .ico--heart {
-  background-image: url("../../img/icons/heart.svg");
+  background-image: url("../img/icons/heart.svg");
   width: 17px;
   height: 15px;
 }
 
 .ico--clock {
-  background-image: url("../../img/icons/clock.svg");
+  background-image: url("../img/icons/clock.svg");
   width: 15px;
   height: 17px;
 }
@@ -678,13 +678,13 @@ h5 {
 }
 
 .ico--phone {
-  background-image: url("../../img/icons/phone.svg");
+  background-image: url("../img/icons/phone.svg");
   width: 7px;
   height: 11px;
 }
 
 .ico--letter {
-  background-image: url("../../img/icons/letter.svg");
+  background-image: url("../img/icons/letter.svg");
   width: 11px;
   height: 8px;
 }
@@ -697,6 +697,7 @@ h5 {
 }
 
 .tag {
+  cursor: pointer;
   font-size: 1.3rem;
   font-style: normal;
   font-weight: normal;
@@ -1091,7 +1092,7 @@ h5 {
 
 .tools__wrapper {
   padding-bottom: 90px;
-  background-image: url(../../img/tools/tools-bg.png);
+  background-image: url("../img/tools/tools-bg.png");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: 100%;
@@ -1195,6 +1196,9 @@ h5 {
   cursor: pointer;
   display: flex;
   flex-direction: column;
+}
+.strategy--hidden {
+  display: none;
 }
 @media (max-width: 768px) {
   .strategy {
