--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -9,6 +9,7 @@ $color-border: #d7d7d7;
 $color-button: #173a56;
 $color-button-hovered: #bcd0e5;
 $color-light: #ffffff;
+$color-overlay: rgba(80, 80, 80, 0.4);
 
 $color-violet: #7752be;
 $color-yellow: #fab005;
